--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "firebase": "^9.22.1",
+    "moment": "^2.30.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.0",
