--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "5.12.3",
     "@mui/styles": "^5.13.2",
+    "@react-spring/web": "^9.7.3",
     "ajv": "^8.16.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
