--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chroma-js": "2.4.2",
     "firebase": "^9.22.1",
     "moment": "^2.30.1",
+    "mui-color-input": "^3.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.0",
